CHANGES IN FLTK 1.1.5rc1

	- The Fl_Gl_Window WIN32 pixel format code did not
	  choose the pixel format with the largest depth buffer
	  (STR #175)
	- The configure script didn't leave space between the
	  CFLAGS/CXXFLAGS and X_CFLAGS variables (STR #174)
	- The Fl_JPEG_Image and Fl_PNG_Image classes did not
	  trap errors from the corresponding image libraries
	  (STR #168)
	- Added "--with-links" configure option to control
	  whether symlinks are created for the FLTK header files
	  (STR #164)
	- Added new hoverdelay() to Fl_Tooltip to control how
	  quickly recent tooltips appear (STR #126)
	- FLUID now sets the size range when a window is shown.
	  This seems to be necessary with some window managers
	  (STR #166)


CHANGES IN FLTK 1.1.4

	- The fl_read_image() function was not implemented on
	  OSX (STR #161)
	- VC++ 7.1 didn't like how the copy operators were
	  disabled for the Fl_Widget class; now include inline
	  code which will never be used but makes VC++ happy
	  (STR #156)
	- Fixed an IRIX compile problem caused by a missing
	  #include (STR #157)
	- FLUID didn't write color/selection_color() calls using
	  the symbolic names when possible, nor did it cast
	  integer colors to Fl_Color (STR #146)
	- Fl_File_Chooser was very close for multiple file
	  selection in large directories (STR #140)
	- Fl_Text_Display/Editor did not disable the current
	  selection when focus was shifted to another widget
	  (STR #131)
	- Fl_Choice didn't use the normal focus box when the
	  plastic scheme was in use (STR #129)
	- Fl_Text_Editor didn't use selection_color()
	  consistently (STR #130)
	- The fltk_forms, fltk_gl, and fltk_images DSO's and
	  HP-UX shared libraries are now linked against the fltk
	  shared library to provide complete dependency
	  resolution (STR #118)
	- The configure.in file did not work with autoconf 2.57.
	- FLUID didn't redraw widgets when changing the X, Y, W,
	  or H values in the widget panel (STR #120)